# pv-inverter-master

./: CLAUDE.md  LICENSE  README.md  deploy.sh  install.sh  pyproject.toml  requirements.txt
.claude/: launch.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v4.0-MILESTONE-AUDIT.md  v4.0-REQUIREMENTS.md  v6.0-MILESTONE-AUDIT.md  v6.0-REQUIREMENTS.md  v6.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: config.example.yaml  config.local.yaml  pv-inverter-proxy.service  venus-os-fronius-proxy.service
docs/: PLUGIN-CHECKLIST.md  WHY-THIS-PROXY.md  dbus-fronius-expectations.md  register-mapping-spec.md  se30k-validation-results.md
scripts/: validate_se30k.py
src/pv_inverter_proxy/: __main__.py  aggregation.py  config.py  connection.py  context.py  control.py  dashboard.py  device_registry.py  (+7 more)
tests/: test_aggregation.py  test_config.py  test_config_save.py  test_connection.py  test_context.py  test_control.py  test_dashboard.py  test_device_registry.py  test_distributor.py  test_logging.py  test_mdns_discovery.py  test_mqtt_payloads.py  test_mqtt_publisher.py  test_opendtu_plugin.py  test_plugin.py  test_proxy.py  test_register_cache.py  test_register_mapping.py  test_scanner.py  test_solaredge_plugin.py  test_solaredge_write.py  test_sungrow_plugin.py  test_sunspec_models.py  test_theme.py  test_timeseries.py  test_venus_reader.py  test_webapp.py  test_websocket.py
(+140 files in other folders)
